@@ -1204,7 +1204,9 @@ typedef struct __cob_module {
 	unsigned char		flag_did_cancel;	/* Module has been canceled */
 	unsigned char		flag_dump_ready;	/* Module was compiled with -fdump */
 	unsigned char		flag_debug_trace;	/* Module debug/trace compile option */
+#if 0 /* currently unused */
 #define COB_MODULE_DEBUG	1
+#endif
 #define COB_MODULE_TRACE	2
 #define COB_MODULE_TRACEALL	4
 	unsigned char		unused[1];		/* Use these flags up later, added for alignment */
